syntax = "proto3";
package temperature;

service TemperatureService {
  // Get the current temperature.
  rpc GetTemperature (TemperatureRequest) returns (Temperature) {}

  // Set a target temperature
  rpc SetTemperature (TargetTemperatureRequest) returns (Temperature) {}
}

// General temperature status
message Temperature {
  int32 temperature = 1;
  int32 target_temperature = 2;
}

// A GetTemperature request
message TemperatureRequest {
  // We may want to request for a specific date in the future.
}

// A SetTargetTemperature request
message TargetTemperatureRequest {
  int32 target_temperature = 1;
}
